# AlphaCeresMotion

./: .cruft.json  .gitignore  LICENCE  README.md  pyproject.toml  requirements.txt  tasks.py
.devcontainer/: devcontainer.json  init_container.sh  requirements.txt
docker/: Dockerfile
integration/: docker-compose.yml  motion_tester.py
src/alpha_motion/: __main__.py  cli.py  config.py  drives.py  machine.py  runners.py  utils.py  version.py
tests/: test_drives_vcan.py  test_main.py
